Adding structured_config and raw_eos_cli

--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l3leaf.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l3leaf.j2
@@ -73,6 +73,16 @@ switch:
            l3leaf.node_groups[l3leaf_node_group].rack,
            l3leaf.defaults.rack) }}
 
+{# switch.raw_eos_cli #}
+  raw_eos_cli: {{ l3leaf.node_groups[l3leaf_node_group].nodes[node].raw_eos_cli | arista.avd.default(
+                  l3leaf.node_groups[l3leaf_node_group].raw_eos_cli,
+                  l3leaf.defaults.raw_eos_cli) }}
+
+{# switch.structured_config #}
+  structured_config: {{ l3leaf.node_groups[l3leaf_node_group].nodes[node].structured_config | arista.avd.default(
+                        l3leaf.node_groups[l3leaf_node_group].structured_config,
+                        l3leaf.defaults.structured_config) }}
+
 {# switch.router_id #}
   router_id: {{ overlay_loopback_network_summary | ipaddr('network') | ipmath(switch_id + switch_max_spines) }}
 
