--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/ethernet-interfaces.j2
@@ -22,6 +22,12 @@ ethernet_interfaces:
 {%                         if l3_interface.description is arista.avd.defined %}
     description: {{ l3_interface.description }}
 {%                         endif %}
+{%                         if l3_interface.raw_eos_cli is arista.avd.defined %}
+    eos_cli: {{ l3_interface.raw_eos_cli }}
+{%                         endif %}
+{%                         if l3_interface.structured_config is arista.avd.defined %}
+    structured_config: {{ l3_interface.structured_config }}
+{%                         endif %}
 {%                     endif %}
 {%                 endfor %}
 {%             endif %}
