--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/router-bgp-vrfs.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/router-bgp-vrfs.j2
@@ -103,6 +103,12 @@
               activate: true
 {%                 endfor %}
 {%             endif %}
+{%             if tenants[tenant].vrfs[vrf].bgp.raw_eos_cli is arista.avd.defined %}
+    eos_cli: {{ tenants[tenant].vrfs[vrf].bgp.raw_eos_cli }}
+{%             endif %}
+{%             if tenants[tenant].vrfs[vrf].bgp.structured_config is arista.avd.defined %}
+    structured_config: {{ tenants[tenant].vrfs[vrf].bgp.structured_config }}
+{%             endif %}
 {%         endfor %}
 {%     endfor %}
 {% endif %}
