--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
@@ -41,6 +41,16 @@ switch:
            l2leaf.node_groups[l2leaf_node_group].rack,
            l2leaf.defaults.rack) }}
 
+{# switch.raw_eos_cli #}
+  raw_eos_cli: {{ l2leaf.node_groups[l2leaf_node_group].nodes[node].raw_eos_cli | arista.avd.default(
+                  l2leaf.node_groups[l2leaf_node_group].raw_eos_cli,
+                  l2leaf.defaults.raw_eos_cli) }}
+
+{# switch.structured_config #}
+  structured_config: {{ l2leaf.node_groups[l2leaf_node_group].nodes[node].structured_config | arista.avd.default(
+                        l2leaf.node_groups[l2leaf_node_group].structured_config,
+                        l2leaf.defaults.structured_config) }}
+
 {# switch.configure_tenants #}
   configure_tenants: true
 
