--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/super-spine.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/super-spine.j2
@@ -15,6 +15,14 @@ switch:
 {# switch.rack #}
   rack: {{ super_spine.nodes[inventory_hostname].rack | arista.avd.default() }}
 
+{# switch.raw_eos_cli #}
+  raw_eos_cli: {{ super_spine.nodes[node].raw_eos_cli | arista.avd.default(
+                  super_spine.defaults.raw_eos_cli) }}
+
+{# switch.structured_config #}
+  structured_config: {{ super_spine.nodes[node].structured_config | arista.avd.default(
+                        super_spine.defaults.structured_config) }}
+
 {# switch.bgp_defaults #}
   bgp_defaults: {{ super_spine_bgp_defaults | arista.avd.default([]) }}
 
