Adding structured_config and raw_eos_cli

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/vlan-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/vlan-interfaces.j2
@@ -171,4 +171,7 @@ interface {{ vlan_interface }}
           vlan_interfaces[vlan_interface].bfd.multiplier is arista.avd.defined %}
    bfd interval {{ vlan_interfaces[vlan_interface].bfd.interval }} min-rx {{ vlan_interfaces[vlan_interface].bfd.min_rx }} multiplier {{ vlan_interfaces[vlan_interface].bfd.multiplier }}
 {%     endif %}
+{%     if vlan_interfaces[vlan_interface].eos_cli is arista.avd.defined %}
+   {{ vlan_interfaces[vlan_interface].eos_cli | indent(3, false) }}
+{%     endif %}
 {% endfor %}
