--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -553,5 +553,9 @@ router bgp {{ router_bgp.as }}
          {{ network_cli }}
 {%             endfor %}
 {%         endfor %}
+{%         if router_bgp.vrfs[vrf].eos_cli is arista.avd.defined %}
+      !
+      {{ router_bgp.vrfs[vrf].eos_cli | indent(6, false) }}
+{%         endif %}
 {%     endfor %}
 {% endif %}
