--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
@@ -44,12 +44,12 @@ switch:
 {# switch.raw_eos_cli #}
   raw_eos_cli: {{ l2leaf.node_groups[l2leaf_node_group].nodes[node].raw_eos_cli | arista.avd.default(
                   l2leaf.node_groups[l2leaf_node_group].raw_eos_cli,
-                  l2leaf.defaults.raw_eos_cli) }}
+                  l2leaf.defaults.raw_eos_cli) | to_json() }}
 
-{# switch.structured_config #}
-  structured_config: {{ l2leaf.node_groups[l2leaf_node_group].nodes[node].structured_config | arista.avd.default(
-                        l2leaf.node_groups[l2leaf_node_group].structured_config,
-                        l2leaf.defaults.structured_config) }}
+{# switch.struct_cfg #}
+  struct_cfg: {{ l2leaf.node_groups[l2leaf_node_group].nodes[node].structured_config | arista.avd.default(
+                 l2leaf.node_groups[l2leaf_node_group].structured_config,
+                 l2leaf.defaults.structured_config) }}
 
 {# switch.configure_tenants #}
   configure_tenants: true
