--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/overlay-controller.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/overlay-controller.j2
@@ -34,11 +34,11 @@ switch:
 
 {# switch.raw_eos_cli #}
   raw_eos_cli: {{ overlay_controller.nodes[node].raw_eos_cli | arista.avd.default(
-                  overlay_controller.defaults.raw_eos_cli) }}
+                  overlay_controller.defaults.raw_eos_cli) | to_json() }}
 
-{# switch.structured_config #}
-  structured_config: {{ overlay_controller.nodes[node].structured_config | arista.avd.default(
-                        overlay_controller.defaults.structured_config) }}
+{# switch.struct_cfg #}
+  struct_cfg: {{ overlay_controller.nodes[node].structured_config | arista.avd.default(
+                 overlay_controller.defaults.structured_config) }}
 
 {# switch.bgp_defaults #}
   bgp_defaults: {{ overlay_controller_bgp_defaults | arista.avd.default([]) }}
