--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/spine.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/spine.j2
@@ -17,11 +17,11 @@ switch:
 
 {# switch.raw_eos_cli #}
   raw_eos_cli: {{ spine.nodes[node].raw_eos_cli | arista.avd.default(
-                  spine.defaults.raw_eos_cli) }}
+                  spine.defaults.raw_eos_cli) | to_json }}
 
-{# switch.structured_config #}
-  structured_config: {{ spine.nodes[node].structured_config | arista.avd.default(
-                        spine.defaults.structured_config) }}
+{# switch.struct_cfg #}
+  struct_cfg: {{ spine.nodes[node].structured_config | arista.avd.default(
+                 spine.defaults.structured_config) }}
 
 {# switch.bgp_defaults #}
   bgp_defaults: {{ spine_bgp_defaults | arista.avd.default([]) }}
