--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/ethernet-interfaces.j2
@@ -26,7 +26,7 @@ ethernet_interfaces:
     eos_cli: {{ l3_interface.raw_eos_cli }}
 {%                         endif %}
 {%                         if l3_interface.structured_config is arista.avd.defined %}
-    structured_config: {{ l3_interface.structured_config }}
+    struct_cfg: {{ l3_interface.structured_config }}
 {%                         endif %}
 {%                     endif %}
 {%                 endfor %}
