--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/vlan-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/vlan-interfaces.j2
@@ -26,7 +26,14 @@ vlan_interfaces:
 {%             set svi_ip_helpers = svi_config.ip_helpers | arista.avd.default(
                                     tenants[tenant].vrfs[vrf].ip_helpers,
                                     svi_profile.ip_helpers) %}
-
+{%             set svi_raw_eos_cli = svi_config.nodes[inventory_hostname].raw_eos_cli | arista.avd.default(
+                                     svi_profile.nodes[inventory_hostname].raw_eos_cli,
+                                     svi_config.raw_eos_cli,
+                                     svi_profile.raw_eos_cli) %}
+{%             set svi_structured_config = svi_config.nodes[inventory_hostname].structured_config | arista.avd.default(
+                                           svi_profile.nodes[inventory_hostname].structured_config,
+                                           svi_config.structured_config,
+                                           svi_profile.structured_config) %}
   Vlan{{ svi | int }}:
     tenant: {{ tenant }}
     tags: {{ svi_tags }}
@@ -69,6 +76,12 @@ vlan_interfaces:
         vrf: {{ vrf }}
 {%                     endif %}
 {%                 endfor %}
+{%             endif %}
+{%             if svi_raw_eos_cli is arista.avd.defined %}
+    eos_cli: {{ svi_raw_eos_cli | to_json }}
+{%             endif %}
+{%             if svi_structured_config is arista.avd.defined %}
+    struct_cfg: {{ svi_structured_config }}
 {%             endif %}
 {%         endfor %}
 {# VLAN interface for iBGP peering in overlay VRFs #}
