Update built-in plugins to netcommons collection

--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/l2leaf.j2
@@ -63,7 +63,7 @@ switch:
 
 {# switch.inband_management_ip and switch.inband_management_interface #}
 {%             if l2leaf_inband_management_subnet is arista.avd.defined %}
-  inband_management_ip: {{ l2leaf_inband_management_subnet | ipaddr('network') | ipmath(3 + switch_id) }}/{{ l2leaf_inband_management_subnet | ipaddr('prefix') }}
+  inband_management_ip: {{ l2leaf_inband_management_subnet | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(3 + switch_id) }}/{{ l2leaf_inband_management_subnet | ansible.netcommon.ipaddr('prefix') }}
   inband_management_interface: Vlan{{ l2leaf_inband_management_vlan | arista.avd.default('4092') }}
 {%             endif %}
 
@@ -92,7 +92,7 @@ switch:
   mlag_ip: {{ (switch_id - 1) * 2 }}
   mlag_peer_ip: {{ ((switch_id - 1) * 2) + 1 }}
   mlag_peer_id: {{ l2leaf.node_groups[l2leaf_node_group].nodes[loop.nextitem].id }}
-  mlag_peer_mgmt_ip: {{ l2leaf.node_groups[l2leaf_node_group].nodes[loop.nextitem].mgmt_ip | ipaddr('address') }}
+  mlag_peer_mgmt_ip: {{ l2leaf.node_groups[l2leaf_node_group].nodes[loop.nextitem].mgmt_ip | ansible.netcommon.ipaddr('address') }}
 {%                 elif loop.index == 2 %}
   mlag_role: "secondary"
   mlag_peer: {{ loop.previtem }}
@@ -100,7 +100,7 @@ switch:
   mlag_ip: {{ ((mlag_peer_id - 1) * 2) + 1 }}
   mlag_peer_ip: {{ (mlag_peer_id -1) * 2 }}
   mlag_peer_id: {{ mlag_peer_id }}
-  mlag_peer_mgmt_ip: {{ l2leaf.node_groups[l2leaf_node_group].nodes[loop.previtem].mgmt_ip | ipaddr('address') }}
+  mlag_peer_mgmt_ip: {{ l2leaf.node_groups[l2leaf_node_group].nodes[loop.previtem].mgmt_ip | ansible.netcommon.ipaddr('address') }}
 {%                 endif %}
 {%             else %}
   mlag: false
