--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/virtual-source-nat-vrfs.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/virtual-source-nat-vrfs.j2
@@ -5,7 +5,7 @@ virtual_source_nat_vrfs:
 {%         for vrf in tenants[tenant].vrfs | arista.avd.natural_sort if switch.vrfs is not none and vrf in switch.vrfs %}
 {%             if tenants[tenant].vrfs[vrf].vtep_diagnostic is defined %}
   {{ vrf }}:
-    ip_address: {{ tenants[tenant].vrfs[vrf].vtep_diagnostic.loopback_ip_range | ipaddr('network') | ipmath(switch.id + switch.max_spines) }}
+    ip_address: {{ tenants[tenant].vrfs[vrf].vtep_diagnostic.loopback_ip_range | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(switch.id + switch.max_spines) }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
