--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/super-spine.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/facts/super-spine.j2
@@ -29,7 +29,7 @@ switch:
                         platform_settings | selectattr("platforms", "arista.avd.contains", "default") | first) }}
 
 {# switch.router_id #}
-  router_id: {{ super_spine_loopback_network_summary | ipaddr('network') | ipmath(switch_id) }}
+  router_id: {{ super_spine_loopback_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(switch_id) }}
 
 {# switch.loopback_network_summary #}
   loopback_network_summary: {{ super_spine_loopback_network_summary }}
