--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/overlay/logic-evpn-route-servers.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/overlay/logic-evpn-route-servers.j2
@@ -16,7 +16,7 @@
 {%                         set server.id = route_server_vars.l3leaf.node_groups[l3leaf_node_group].nodes[node].id %}
 {%                         set server.bgp_as = route_server_vars.l3leaf.node_groups[l3leaf_node_group].bgp_as | arista.avd.default(
                                                route_server_vars.l3leaf.defaults.bgp_as) %}
-{%                         set server.ip_address = route_server_vars.overlay_loopback_network_summary | ipaddr('network') | ipmath(server.id + route_server_vars.max_spines | arista.avd.default(
+{%                         set server.ip_address = route_server_vars.overlay_loopback_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(server.id + route_server_vars.max_spines | arista.avd.default(
                                                                                                                                                                               route_server_vars.spine.nodes | length)) %}
 {%                         do overlay_data.evpn_route_servers.update({ route_server: server }) %}
 {%                     endif %}
@@ -32,7 +32,7 @@
 {%             set server.evpn_role = route_server_evpn_role %}
 {%             set server.id = route_server_vars.spine.nodes[route_server].id %}
 {%             set server.bgp_as = route_server_vars.spine.bgp_as | arista.avd.default %}
-{%             set server.ip_address = route_server_vars.overlay_loopback_network_summary | ipaddr('network') | ipmath(server.id) %}
+{%             set server.ip_address = route_server_vars.overlay_loopback_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(server.id) %}
 {%             do overlay_data.evpn_route_servers.update({ route_server: server }) %}
 {%         endif %}
 {%     elif route_server_vars.type is arista.avd.defined('super-spine') %}
@@ -43,7 +43,7 @@
 {%             set server.evpn_role = route_server_evpn_role %}
 {%             set server.id = route_server_vars.super_spine.nodes[route_server].id %}
 {%             set server.bgp_as = route_server_vars.super_spine.bgp_as | arista.avd.default %}
-{%             set server.ip_address = route_server_vars.super_spine_loopback_network_summary  | ipaddr('network') | ipmath(server.id) %}
+{%             set server.ip_address = route_server_vars.super_spine_loopback_network_summary  | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(server.id) %}
 {%             do overlay_data.evpn_route_servers.update({ route_server: server }) %}
 {%         endif %}
 {%     elif route_server_vars.type is arista.avd.defined('overlay-controller') %}
@@ -56,7 +56,7 @@
 {%             set server.id = route_server_vars.overlay_controller.nodes[route_server].id %}
 {%             set server.bgp_as = route_server_vars.overlay_controller.nodes[route_server].bgp_as | arista.avd.default(
                                    route_server_vars.overlay_controller.defaults.bgp_as) %}
-{%             set server.ip_address = route_server_vars.overlay_controller_loopback_network_summary  | ipaddr('network') | ipmath(server.id) %}
+{%             set server.ip_address = route_server_vars.overlay_controller_loopback_network_summary  | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(server.id) %}
 {%             do overlay_data.evpn_route_servers.update({ route_server: server }) %}
 {%         endif %}
 {%     endif %}
