--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/router-bgp-vrfs.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/tenants/router-bgp-vrfs.j2
@@ -22,7 +22,7 @@
 {%                 endif %}
 {%             endfor %}
     {{ vrf }}:
-      router_id: {{ overlay_loopback_network_summary | ipaddr('network') | ipmath(switch.id + switch.max_spines) }}
+      router_id: {{ overlay_loopback_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(switch.id + switch.max_spines) }}
       rd: "{{ tenants_data.evpn_rd_admin_subfield }}:{{ tenants[tenant].vrfs[vrf].vrf_vni }}"
       route_targets:
         import: {{ route_targets.import | to_json }}
@@ -36,7 +36,7 @@
 {%                     set configure_mlag_ibgp_peering = tenants[tenant].enable_mlag_ibgp_peering_vrfs %}
 {%                 endif %}
 {%                 if configure_mlag_ibgp_peering %}
-        {{ mlag_ips.leaf_peer_l3 | ipaddr('network') | ipmath(switch.mlag_peer_ip) }}:
+        {{ mlag_ips.leaf_peer_l3 | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(switch.mlag_peer_ip) }}:
           peer_group: {{ bgp_peer_groups.MLAG_IPv4_UNDERLAY_PEER.name | arista.avd.default("MLAG-IPv4-UNDERLAY-PEER") }}
 {%                 endif %}
 {%             endif %}
