--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/ebgp/spine-router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/ebgp/spine-router-bgp.j2
@@ -36,7 +36,7 @@ router_bgp:
 {# Underlay network peering #}
 {%             for leaf_spine in leaf_spines %}
 {%                 if leaf_spine == inventory_hostname %}
-    {{ underlay_p2p_network_summary | ipaddr('network') | ipmath(((l3leaf.node_groups[l3leaf_node_group].nodes[node].id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2 + 1) }}:
+    {{ underlay_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((l3leaf.node_groups[l3leaf_node_group].nodes[node].id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2 + 1) }}:
       peer_group: {{ bgp_peer_groups.IPv4_UNDERLAY_PEERS.name | arista.avd.default("IPv4-UNDERLAY-PEERS") }}
       remote_as: {{ l3leaf.node_groups[l3leaf_node_group].nodes[node].bgp_as | arista.avd.default(
                     l3leaf.node_groups[l3leaf_node_group].bgp_as,
@@ -55,10 +55,10 @@ router_bgp:
 {%         set s_spine_id = loop.index0 // max_spine_to_super_spine_links + 1 %}
 {%         set ip_pool = super_spine_underlay_p2p_network_summary %}
 {#     max number of hosts in subnet will be divided by max super-spine number to avoid address changes when provisioning new spines #}
-{%         set ip_pool_max_hosts_in_subnet = ip_pool | ipaddr('size') %}
+{%         set ip_pool_max_hosts_in_subnet = ip_pool | ansible.netcommon.ipaddr('size') %}
 {%         set offset = loop.index0 % max_spine_to_super_spine_links %}
     {{
-      ip_pool | ipaddr('network') | ipmath(
+      ip_pool | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(
             (ip_pool_max_hosts_in_subnet / max_super_spines) | int * (s_spine_id - 1) + ((switch.id - 1) * max_spine_to_super_spine_links + offset) * 2
       )
     }}:
@@ -72,7 +72,7 @@ router_bgp:
 {%             set overlay_controller_remote_switches = overlay_controller.nodes[overlay_controller_node].remote_switches | arista.avd.default(overlay_controller.defaults.remote_switches) %}
 {%             for overlay_controller_remote_switch in overlay_controller_remote_switches %}
 {%                 if overlay_controller_remote_switch == inventory_hostname %}
-    {{ overlay_controller_p2p_network_summary | ipaddr('network') | ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2 + 1) }}:
+    {{ overlay_controller_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2 + 1) }}:
       peer_group: {{ bgp_peer_groups.IPv4_UNDERLAY_PEERS.name | arista.avd.default("IPv4-UNDERLAY-PEERS") }}
       description: {{ overlay_controller_node }}
       remote_as: {{ overlay_controller.nodes[overlay_controller_node].bgp_as | arista.avd.default(overlay_controller.defaults.bgp_as) }}
