--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/ebgp/super-spine-router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/ebgp/super-spine-router-bgp.j2
@@ -29,9 +29,9 @@ router_bgp:
 {%                 set spine_id = hostvars[host]['spine']['nodes'][host]['id'] %}
 {%                 set ip_pool = hostvars[host]['super_spine_underlay_p2p_network_summary'] %}
 {#             max number of hosts in subnet will be divided by max super-spine number to avoid address changes when provisioning new spines #}
-{%                 set ip_pool_max_hosts_in_subnet = ip_pool | ipaddr('size') %}
+{%                 set ip_pool_max_hosts_in_subnet = ip_pool | ansible.netcommon.ipaddr('size') %}
     {{
-      ip_pool | ipaddr('network') | ipmath(
+      ip_pool | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(
             (ip_pool_max_hosts_in_subnet / max_super_spines) | int * (switch.id - 1) + ((spine_id - 1) * max_spine_to_super_spine_links + offset) * 2 + 1
       )
     }}:
@@ -47,7 +47,7 @@ router_bgp:
 {%             set overlay_controller_remote_switches = overlay_controller.nodes[overlay_controller_node].remote_switches | arista.avd.default(overlay_controller.defaults.remote_switches) %}
 {%             for overlay_controller_remote_switch in overlay_controller_remote_switches %}
 {%                 if overlay_controller_remote_switch == inventory_hostname %}
-    {{ overlay_controller_p2p_network_summary | ipaddr('network') | ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2 + 1) }}:
+    {{ overlay_controller_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2 + 1) }}:
       peer_group: {{ bgp_peer_groups.IPv4_UNDERLAY_PEERS.name | arista.avd.default("IPv4-UNDERLAY-PEERS") }}
       description: {{ overlay_controller_node }}
       remote_as: {{ overlay_controller.nodes[overlay_controller_node].bgp_as | arista.avd.default(overlay_controller.defaults.bgp_as) }}
