--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/interfaces/l3leaf-ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/interfaces/l3leaf-ethernet-interfaces.j2
@@ -25,7 +25,7 @@ ethernet_interfaces:
 {%         if underlay_rfc5549 is arista.avd.defined(true) %}
     ipv6_enable: true
 {%         else %}
-    ip_address: {{ underlay_p2p_network_summary | ipaddr('network') | ipmath(((switch.id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2 + 1) }}/31
+    ip_address: {{ underlay_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((switch.id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2 + 1) }}/31
 {%         endif %}
 {%         if switch.underlay_routing_protocol == "ospf" %}
     ospf_network_point_to_point: true
@@ -74,7 +74,7 @@ ethernet_interfaces:
 {%                 endif %}
     type: routed
     shutdown: false
-    ip_address: {{ overlay_controller_p2p_network_summary | ipaddr('network') | ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2) }}/31
+    ip_address: {{ overlay_controller_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2) }}/31
 {%                 if switch.underlay_routing_protocol == "ospf" %}
     ospf_network_point_to_point: true
     ospf_area: {{ underlay_ospf_area }}
