--- a/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/interfaces/spine-ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/designs/l3ls-evpn/underlay/interfaces/spine-ethernet-interfaces.j2
@@ -43,7 +43,7 @@ ethernet_interfaces:
 {%     if underlay_rfc5549 is arista.avd.defined(true) %}
     ipv6_enable: true
 {%     else %}
-    ip_address: {{ underlay_p2p_network_summary | ipaddr('network') | ipmath(((l3leaf.node_groups[l3leaf_node_group].nodes[node].id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2) }}/31
+    ip_address: {{ underlay_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((l3leaf.node_groups[l3leaf_node_group].nodes[node].id -1) * 2 * switch.max_spines * max_l3leaf_to_spine_links) + loop.index0 * 2) }}/31
 {%     endif %}
 {%                 if switch.underlay_routing_protocol == "ospf" %}
     ospf_network_point_to_point: true
@@ -66,7 +66,7 @@ ethernet_interfaces:
 {%     set s_spine_id = loop.index0 // max_spine_to_super_spine_links + 1 %}
 {%     set ip_pool = super_spine_underlay_p2p_network_summary %}
 {#     max number of hosts in subnet will be divided by max super-spine number to avoid address changes when provisioning new spines #}
-{%     set ip_pool_max_hosts_in_subnet = ip_pool | ipaddr('size') %}
+{%     set ip_pool_max_hosts_in_subnet = ip_pool | ansible.netcommon.ipaddr('size') %}
 {%     set offset = loop.index0 % max_spine_to_super_spine_links %}
 {%     set s_spine_name_list = super_spine.nodes | list %}
 {%     set s_spine_port_name = spine.nodes[inventory_hostname]['super_spine_interfaces'][(switch.id - 1) * max_spine_to_super_spine_links + offset] %}
@@ -91,7 +91,7 @@ ethernet_interfaces:
     type: routed
     shutdown: false
     ip_address: {{
-        ip_pool | ipaddr('network') | ipmath(
+        ip_pool | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(
             (ip_pool_max_hosts_in_subnet / max_super_spines) | int * (s_spine_id - 1) + ((switch.id - 1) * max_spine_to_super_spine_links + offset) * 2 + 1
         )
     }}/31
@@ -132,7 +132,7 @@ ethernet_interfaces:
 {%                 endif %}
     type: routed
     shutdown: false
-    ip_address: {{ overlay_controller_p2p_network_summary | ipaddr('network') | ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2) }}/31
+    ip_address: {{ overlay_controller_p2p_network_summary | ansible.netcommon.ipaddr('network') | ansible.netcommon.ipmath(((overlay_controller.nodes[overlay_controller_node].id -1) * 2 * max_overlay_controller_to_switch_links) + loop.index0 * 2) }}/31
 {%                 if switch.underlay_routing_protocol == "ospf" %}
     ospf_network_point_to_point: true
     ospf_area: {{ underlay_ospf_area }}
